--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="icon" href="../../../../favicon.ico">
 
-		<title>Muncak</title>
+		<title>Salary</title>
 
 		<!-- Custom styles for this template -->
 		<link href="css/style.css" rel="stylesheet">
