--- a/off/src/index.html
+++ b/off/src/index.html
@@ -42,7 +42,7 @@
 					<div class="header-contacts wow fadeInRight">
 
 						<div class="header-contacts__block">
-							<a href="tel: +007548585400" class="header-contacts__block-icon">
+							<a href="tel:+007548585400" class="header-contacts__block-icon">
 								<i class="fas fa-phone"></i>
 							</a>
 							<div class="header-contacts__block-wrap">
@@ -1078,7 +1078,7 @@
 						<input type="text" class="contact-popup__form-input" placeholder="Full Name">
 						<input type="text" class="contact-popup__form-input" placeholder="Email">
 						<input type="text" class="contact-popup__form-input" placeholder="Phone" id="phone">
-						<textarea name="" id="" cols="30" rows="10" class="contact-popup__form-text" placeholder="Message"></textarea>
+						<textarea cols="30" rows="10" class="contact-popup__form-text" placeholder="Message"></textarea>
 						<button class="button contact-popup__form-button">Send</button>
 				</form>
 				<!-- /.contact-popup__form -->
