--- a/off/src/index.html
+++ b/off/src/index.html
@@ -151,7 +151,7 @@
 		<section class="reason" id="reason">
 			<div class="container">
 				<div class="section-title">
-					Six Good Reasons to Choose
+					<h1>Six Good Reasons to Choose</h1>
 				</div>
 				<!-- /.section-title -->
 				<div class="section-subtitle">
@@ -263,7 +263,7 @@
 			<div class="container">
 
 				<div class="section-title service-title">
-					Our Services
+					<h2>Our Services</h2>
 				</div>
 				<!-- /.section-header -->
 
@@ -388,7 +388,7 @@
 						</div>
 						<!-- /.numbers-block__number -->
 						<div class="numbers-block__descr">
-							Employees
+							<h3>Employees</h3>
 						</div>
 						<!-- /.numbers-block__descr -->
 					</div>
@@ -399,7 +399,7 @@
 						</div>
 						<!-- /.numbers-block__number -->
 						<div class="numbers-block__descr">
-							Offices
+							<h3>Offices</h3>
 						</div>
 						<!-- /.numbers-block__descr -->
 					</div>
@@ -410,7 +410,7 @@
 						</div>
 						<!-- /.numbers-block__number -->
 						<div class="numbers-block__descr">
-							Years of Existence
+							<h3>Years of Existence</h3>
 						</div>
 						<!-- /.numbers-block__descr -->
 					</div>
@@ -427,8 +427,8 @@
 			<div class="container">
 				<div class="rate-wrap wow fadeInUp">
 					<div class="rate-title section-title">
-						We Are The One Of The
-						Most Effective Company
+						<h4>We Are The One Of The
+							Most Effective Company</h4>
 					</div>
 					<!-- /.rate-title -->
 					<div class="rate-block">
@@ -453,7 +453,7 @@
 		<section class="incorp" id="incorp">
 			<div class="container">
 				<div class="incorp-title section-title wow fadeInUp">
-					Worldwide Incorporations
+					<h5>Worldwide Incorporations</h5>
 				</div>
 				<!-- /.incorp-title section-title -->
 				<div class="incorp-subtitle section-subtitle wow fadeInUp">
@@ -553,7 +553,7 @@
 		<section class="news" id="news">
 			<div class="container">
 				<div class="section-title">
-					Latest News
+					<h5>Latest News</h5>
 				</div>
 				<!-- /.section-title -->
 				<div class="section-subtitle">
@@ -607,7 +607,7 @@
 		<section class="feedback" id="feedback">
 			<div class="container">
 				<div class="section-title">
-					Our Clients Says
+					<h5>Our Clients Says</h5>
 				</div>
 				<!-- /.section title -->
 				<div class="feedback-slider wow fadeInUp">
@@ -766,7 +766,7 @@
 		<section class="offices" id="offices">
 			<div class="container">
 				<div class="section-title">
-					Our Various Offices
+					<h5>Our Various Offices</h5>
 				</div>
 				<!-- /.section-title -->
 				<div class="section-subtitle">
@@ -1067,7 +1067,7 @@
 
 		<section class="contact-popup mfp-hide" id="contact-popup">
 			<div class="contact-popup__title">
-				Contact
+				<h6>Contact</h6>
 			</div>
 			<!-- /.contact-popup__title -->
 			<div class="contact-popup__subtitle">
@@ -1087,7 +1087,7 @@
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-		<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<script src="libs/jquery.magnific-popup.min.js"></script>
 		<script src="libs/wow.min.js"></script>
 		<script src="libs/counter.js"></script>
