--- a/off/src/index.html
+++ b/off/src/index.html
@@ -86,10 +86,10 @@
 		</header>
 		<!-- /.header -->
 
-		<section class="nav" id="nav">
+		<nav class="nav" id="nav">
 			<div class="container">
 
-				<nav class="nav-wrap">
+				<div class="nav-wrap">
 					<ul class="nav-main">
 						<li><a href="#header" class="nav-main__item">
 							Home
@@ -118,11 +118,11 @@
 						<i class="fas fa-bars nav-icon__burger"></i>
 						<i class="fas fa-times nav-icon__cross hide"></i>
 					</div>
-				</nav>
+				</div>
 				<!-- /.nav-wrap -->
 			</div>
 			<!-- /.container -->
-		</section>
+		</nav>
 		<!-- /.nav -->
 			
 
