--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a-marker preset="hiro">
         <a-box position="0 0.5 0" material="color: red;"></a-box>
       </a-marker>
-      <a-entity camera></a-entity>
+      <a-entity camera="fov: 80;"></a-entity>
     </a-scene>
   </div>
 
