--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
 <body>
   <div id="container">
-    <a-scene embedded arjs="sourceType: webcam;">
-      <a-marker preset="hiro">
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
-      </a-marker>
-      <a-entity camera="fov: 80;"></a-entity>
+    <a-scene embedded arjs="sourceType: camera; patternRatio: 0;">
+      <a-box position="0 0.5 -1" material="color: red;"></a-box>
+      <a-entity camera></a-entity>
     </a-scene>
   </div>
 
