--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="container">
     <a-scene embedded arjs="sourceType: camera; patternRatio: 0;">
-      <a-box position="0 0.5 -1" material="color: red;"></a-box>
+      <a-entity geometry="primitive: box;" material="color: red;"></a-entity>
       <a-entity camera></a-entity>
     </a-scene>
   </div>
