--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <title>Simple AR.js App</title>
+  <title>Simple AR.js App (Mobile)</title>
   <style>
     #container {
       width: 100%;
@@ -13,18 +12,16 @@
       left: 0;
     }
   </style>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
-
 <body>
   <div id="container">
     <a-scene embedded arjs="sourceType: camera; patternRatio: 0;">
-      <a-entity geometry="primitive: box;" material="color: red;"></a-entity>
+      <a-marker-camera preset="hiro"></a-marker-camera>
+      <a-box position="0 0.5 0" material="color: red;"></a-box>
       <a-entity camera></a-entity>
     </a-scene>
   </div>
-
 </body>
-
 </html>
