--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="container">
     <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix;">
       <a-camera-static></a-camera-static>
-      <a-box position="0 0.5 -1" material="color: red;"></a-box>
+      <a-entity gltf-model="url(./scene.gltf)"></a-entity>
     </a-scene>
   </div>
 </body>
