--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="container">
     <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix;">
-      <a-camera-static></a-camera-static>
+      <a-camera-static fov="60"></a-camera-static>
       <a-entity gltf-model="url(./scene.gltf)"></a-entity>
     </a-scene>
   </div>
