--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <div id="container">
     <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix;">
-      <a-camera-static fov="60"></a-camera-static>
-      <a-entity gltf-model="url(./scene.gltf)"></a-entity>
+      <a-camera-static fov="50"></a-camera-static>
+      <a-entity gltf-model="url(./scene.gltf)" scale="0.2 0.2 0.2"></a-entity>
     </a-scene>
   </div>
 </body>
