--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="container">
-    <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix;">
+    <a-scene embedded arjs="sourceType: camera; detectionMode: mono_and_matrix;">
       <a-camera-static scale="0.5 0.5 0.5"></a-camera-static>
       <a-entity gltf-model="url(./scene.gltf)"></a-entity>
     </a-scene>
